--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
     <!-- <div class="container"> -->
 
     <center>
-        <img src="https://i.pinimg.com/originals/74/d7/8f/74d78f6848ed0908939e059f7ade32f8.jpg" alt="office table" width="50%" height="30%">
+        <img src="https://i.pinimg.com/originals/74/d7/8f/74d78f6848ed0908939e059f7ade32f8.jpg" alt="office table and computer" width="50%" height="30%">
     </center>
 
     <!-- <div class="text-block"> -->
