--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
     <h1 style="margin-left:3em; text-align: left; float: left; color: #929798; ">
         <a href="/ " style="color:#ABE4D4; text-decoration: none; ">INTERSECTION ➕</a> </h1>
-    <h4 style="margin-right:3em;text-align: right; float: right; "> <a href="/ " style="color:#ABE4D4; text-decoration: none;  ">HOME</a> || <a href="/about.html" style="color:#929798;text-decoration: none;  ">ABOUT </a> ||<a href="/contact.html" style="color:#929798;text-decoration: none;  "> CONTACT</a></h4>
+    <h4 style="margin-right:3em;text-align: right; float: right; "> <a href="/ " style="color:#ABE4D4; text-decoration: none;  ">HOME</a> || <a href="about.html" style="color:#929798;text-decoration: none;  ">ABOUT </a> ||<a href="contact.html" style="color:#929798;text-decoration: none;  "> CONTACT</a></h4>
     <hr style="clear: both; visibility: hidden; " />
 
     <img src="https://i.pinimg.com/originals/89/53/ad/8953adaf47a32a00416e4ecc9bb9d4de.jpg" alt="table" width="50%" align="left">
