--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1 style="margin-left:3em; text-align: left; float: left; color: #929798; ">
         <a href="/ " style="color:#ABE4D4; text-decoration: none; ">INTERSECTION ➕</a> </h1>
-    <h4 style="margin-right:3em;text-align: right; float: right; "> <a href="/ " style="color:#ABE4D4; text-decoration: none; ">HOME</a> || <a href="/about.html" style="color:#929798;text-decoration: none;  ">ABOUT </a> ||<a href="/contact.html" style="color:#929798;text-decoration: none;  "> CONTACT</a></h4>
+    <h4 style="margin-right:3em;text-align: right; float: right; "> <a href="/ " style="color:#ABE4D4; text-decoration: none; ">HOME</a> || <a href="about.html" style="color:#929798;text-decoration: none;  ">ABOUT </a> ||<a href="contact.html" style="color:#929798;text-decoration: none;  "> CONTACT</a></h4>
     <hr style="clear: both; visibility: hidden; " />
     <h3 style="margin-left:8em; text-align: left; float: left; color: #929798; "><i>an advertising agency</i></h3>
 
