--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         </p>
 
 
-        <p> <a href="/contact.html" style="color:#96E0DC; text-decoration: none; ">THE BEST PART? WE'RE ALWAYS LOOKING FOR A NEW CHALLENGE TO TACKLE.</a> </p>
+        <p> <a href="contact.html" style="color:#96E0DC; text-decoration: none; ">THE BEST PART? WE'RE ALWAYS LOOKING FOR A NEW CHALLENGE TO TACKLE.</a> </p>
     </center>
 
 
