--- a/about.html
+++ b/about.html
@@ -11,16 +11,16 @@
 <body>
 
     <h1 style="margin-left:3em; text-align: left; float: left; color: #929798; ">
-        <a href="index.html" style="color:#ABE4D4; text-decoration: none; ">INTERSECTION ➕</a> </h1>
-    <h4 style="margin-right:3em;text-align: right; float: right; "> <a href="index.html " style="color:#ABE4D4; text-decoration: none;  ">HOME</a> || <a href="about.html" style="color:#929798;text-decoration: none;  ">ABOUT </a> ||<a href="contact.html" style="color:#929798;text-decoration: none;  "> CONTACT</a></h4>
+        <a href="/ " style="color:#ABE4D4; text-decoration: none; ">INTERSECTION ➕</a> </h1>
+    <h4 style="margin-right:3em;text-align: right; float: right; "> <a href="/ " style="color:#ABE4D4; text-decoration: none;  ">HOME</a> || <a href="/about.html" style="color:#929798;text-decoration: none;  ">ABOUT </a> ||<a href="/contact.html" style="color:#929798;text-decoration: none;  "> CONTACT</a></h4>
     <hr style="clear: both; visibility: hidden; " />
 
-    <img src="https://i.pinimg.com/originals/89/53/ad/8953adaf47a32a00416e4ecc9bb9d4de.jpg" alt="table" width="50%" align="left">
+    <img src="https://i.pinimg.com/originals/89/53/ad/8953adaf47a32a00416e4ecc9bb9d4de.jpg" alt="office table" width="50%" align="left">
 
 
 
     <center>
-        <h3 style="text-align: center;">WHAT WE BELIEVE</h3>
+        <h3 style="text-align: center;"> WHAT WE BELIEVE</h3>
         <p style="text-align: center ;"> We exist to create authentic exchanges between brands and people. Brands are symbols of experience. They have a responsibility to deliver a brilliant product that answers consumer needs in an inspiring way. Successful brands are more than a good
             logo or tagline. They are an experience that delight and inspire consumers, wherever they find it. </p>
 
@@ -30,8 +30,25 @@
             you covered. With our partnership comes a team of headstrong advocates supporting your brand.
         </p>
 
+        <ol>
+            <h3> <i>branding + design</i> </h3>
+            <li style="list-style-type:none;">Identity</li>
+            <li style="list-style-type:none;">Graphic Design</li>
+            <li style=" list-style-type:none;">Photography</li>
 
-        <p> <a href="contact.html" style="color:#96E0DC; text-decoration: none; ">THE BEST PART? WE'RE ALWAYS LOOKING FOR A NEW CHALLENGE TO TACKLE.</a> </p>
+            <h3> <i>digital + web</i> </h3>
+            <li style=" list-style-type:none;">Website Development</li>
+            <li style=" list-style-type:none;">Social Media</li>
+
+            <h3> <i>video + film</i> </h3>
+            <li style=" list-style-type:none;">Storyboarding</li>
+            <li style=" list-style-type:none;">Script-Writing</li>
+            <li style=" list-style-type:none;">Talent Procurement</li>
+        </ol>
+
+        <br>
+
+        <p> <a href="/contact.html " style="color:#96E0DC; text-decoration: none; ">THE BEST PART? WE'RE ALWAYS LOOKING FOR A NEW CHALLENGE TO TACKLE.</a> </p>
     </center>
 
 
