--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
 
 
     <h1 style="margin-left:3em; text-align: left; float: left; color: #929798; ">
-        <a href="index.html " style="color:#ABE4D4; text-decoration: none; ">INTERSECTION ➕</a> </h1>
-    <h4 style="margin-right:3em;text-align: right; float: right; "> <a href="index.html " style="color:#ABE4D4; text-decoration: none;  ">HOME</a> || <a href="about.html" style="color:#929798;text-decoration: none;  ">ABOUT </a> ||<a href="contact.html" style="color:#929798;text-decoration: none;  "> CONTACT</a></h4>
+        <a href="/ " style="color:#ABE4D4; text-decoration: none; ">INTERSECTION ➕</a> </h1>
+    <h4 style="margin-right:3em;text-align: right; float: right; "> <a href="/ " style="color:#ABE4D4; text-decoration: none;  ">HOME</a> || <a href="/about.html" style="color:#929798;text-decoration: none;  ">ABOUT </a> ||<a href="/contact.html" style="color:#929798;text-decoration: none;  "> CONTACT</a></h4>
     <hr style="clear: both; visibility: hidden; " />
 
 
@@ -22,7 +22,7 @@
     <!-- <div class="container"> -->
 
     <center>
-        <img src="https://i.pinimg.com/originals/74/d7/8f/74d78f6848ed0908939e059f7ade32f8.jpg" alt="office table and computer" width="50%" height="30%">
+        <img src="https://i.pinimg.com/originals/74/d7/8f/74d78f6848ed0908939e059f7ade32f8.jpg" alt="office table" width="50%" height="30%">
     </center>
 
     <!-- <div class="text-block"> -->
